# crdt-trait

./: Cargo.toml  PLAN-delta-sync.md  README.md
.github/workflows/: ci.yml
crdt-derive/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
crdt-derive/src/: lib.rs
examples/: consistency_failure.rs  crdt_compose.rs  delta_pattern.rs  delta_remote_sync.rs  delta_sync.rs  delta_sync_diagram.md  max_value.rs
src/: lib.rs  replica.rs  traits.rs
src/causal/: itc.rs  mod.rs  vector.rs
src/crdt/: checks.rs  mod.rs
src/delta_sync/: checks.rs  mod.rs
src/identified/: gcounter.rs  mod.rs
src/primitive/: gset.rs  mod.rs
